<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:sweet="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:layout_marginBottom="4dp"
    sweet:cardElevation="5dp"
    sweet:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_Detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingTop="4dp"
                    android:text="@string/nomor_kendaraan"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingTop="4dp"
                    android:text="@string/status_kendaraan"
                    android:textAlignment="textEnd"
                    android:textSize="10dp" />



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="3dp">

                <TextView
                    android:id="@+id/txt_NoKendaraan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_truck"
                    android:drawablePadding="5dp"
                    android:gravity="center|left"
                    android:text="Nomor Kendaraan"
                    android:textColor="#000"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/txt_Status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/ic_status"
                    android:drawablePadding="5dp"
                    android:gravity="center|right"
                    android:text="Status"
                    android:textColor="#000"
                    android:textSize="13dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingTop="4dp"
                    android:text="@string/stnk_expired"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingTop="4dp"
                    android:text="@string/kir_expired"
                    android:textAlignment="textEnd"
                    android:textSize="10dp" />



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="3dp">

                <TextView
                    android:id="@+id/txt_StnkExpired"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_smu"
                    android:drawablePadding="5dp"
                    android:gravity="center|left"
                    android:text="-"
                    android:textColor="#000"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/txt_KirExpired"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/ic_smu"
                    android:drawablePadding="5dp"
                    android:gravity="center|right"
                    android:text="-"
                    android:textColor="#000"
                    android:textSize="13dp" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
